--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -7,14 +7,27 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Sleep Tracker</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div class="ion-align-items-center">
+      <ion-button routerLink="/overnight-sleep">Log Overnight Sleep</ion-button>
+    </div>
+    <div class="ion-align-items-center">
+      <ion-button routerLink="/sleepiness">Log Sleepiness</ion-button>
+    </div>
   </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <ion-button expand="full" routerLink="/overnight-sleep-log">Overnight Sleep Log</ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button expand="full" routerLink="/sleepiness-log">Sleepiness Log</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
