Implemented adding/removing and viewing of sleepiness data

--- a/sleeptracker/src/app/overnight-sleep/overnight-sleep.page.html
+++ b/sleeptracker/src/app/overnight-sleep/overnight-sleep.page.html
@@ -23,6 +23,6 @@
   </div>
 
   <div class="ion-align-items-center">
-    <ion-button (click)="addEntry(startDateTime, endDateTime)">Log Sleepiness</ion-button>
+    <ion-button (click)="addEntry(startDateTime, endDateTime)">Log</ion-button>
   </div>
 </ion-content>
