--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -7,6 +7,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-header>
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6">
+            <ion-button expand="full" routerLink="/overnight-sleep-log">Overnight Sleep Log</ion-button>
+          </ion-col>
+          <ion-col size="6">
+            <ion-button expand="full" routerLink="/sleepiness-log">Sleepiness Log</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-toolbar>
+  </ion-header>
+  
   <div id="container">
     <div class="ion-align-items-center">
       <ion-button routerLink="/overnight-sleep">Log Overnight Sleep</ion-button>
@@ -16,18 +31,3 @@
     </div>
   </div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col size="6">
-          <ion-button expand="full" routerLink="/overnight-sleep-log">Overnight Sleep Log</ion-button>
-        </ion-col>
-        <ion-col size="6">
-          <ion-button expand="full" routerLink="/sleepiness-log">Sleepiness Log</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-toolbar>
-</ion-footer>
