--- a/sleeptracker/src/app/sleepiness-log/sleepiness-log.page.html
+++ b/sleeptracker/src/app/sleepiness-log/sleepiness-log.page.html
@@ -8,4 +8,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-</ion-content>
+  <ion-list>
+    <ion-item-sliding *ngFor="let entry of allSleepinessData">
+      <ion-item>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ entry.loggedAt }}</ion-card-title>
+            <ion-card-subtitle>{{ entry.summaryString() }}</ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="deleteEntry(entry)">Delete</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+</ion-content>>
